# specccy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NUAA-README.md  README.md  pyproject.toml  spec-driven.md
.github/workflows/: docs.yml  release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh  update-version.sh
docs/: .gitignore  README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml
memory/: constitution.md
scripts/: create-release-packages.sh  update-agent-context.sh
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  create-new-program.sh  setup-plan.sh  setup-program-plan.sh  update-agent-context.sh
scripts/powershell/: check-implementation-prerequisites.ps1  check-prerequisites.ps1  common.ps1  create-new-feature.ps1  create-new-program.ps1  update-agent-context.ps1
src/specify_cli/: __init__.py
templates/: plan-template.md  program-activities-template.md  program-plan-template.md  program-spec-template.md
templates/commands/: activities.md  analyze.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
